dto_mapper_derive/tests/compile_fail/tuple_struct.stderr
error: Unsupported shape `unnamed fields`. Expected named fields.
 --> tests/compile_fail/tuple_struct.rs:5:10
  |
5 | #[derive(From)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `From` (in Nightly builds, run with -Z macro-backtrace for more info)
